# cookiecutter-data-analysis

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Pipfile  README.md  index.html  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/docs/reports/: index.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: paths.py
